2008-12-09  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: prevent publish items with invalid
	XML schema bugfix (EJAB-699) (previous commit was uncomplete)
	and fix bug injected in previous commit

2008-12-08  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_c2s.erl: Reduce memory consumption due to caps handling
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_caps.erl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: ignore unknown configuration fields
	(EJAB-762) (thanks to Jack Moffitt)

	* src/mod_pubsub/mod_pubsub.erl: fix node authorization bug (EJAB-798)
	send authorization update event (EJAB-799) (thanks to Brian Cully)

	* src/mod_pubsub/mod_pubsub.erl: add nodetree filtering and
	authorization (EJAB-813) (thanks to Brian Cully)
	* src/mod_pubsub/nodetree_default.erl: Likewise
	* src/mod_pubsub/nodetree_virtual.erl: Likewise
	* src/mod_pubsub/gen_pubsub_nodetree.erl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: prevent publish items with invalid
	XML schema (EJAB-699)

	* src/mod_pubsub/pubsub.hrl: remove unused pubsub_presence record

	* src/mod_pubsub/node_flat.erl: renamed from node_zoo

	* src/mod_pubsub/mod_pubsub.erl: reply to suscriptions options queries
	with unsupported feature error (EJAB-713)

	* src/mod_pubsub/node_default.erl: remove pubsub_state record when
	unsubscribing node without affiliation (EJAB-776)

2008-12-08  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: Enforce client stanza from attribute
	(EJAB-812).
	* src/jlib.erl: Likewise.

2008-12-02  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Move definitions to header file
	* src/mod_muc/mod_muc_room.hrl: New header file
	* src/Makefile.in: Likewise

2008-12-01  Badlop  <badlop@process-one.net>

	* doc/guide.tex: New subsection Database Connection
	* doc/guide.html: Likewise

2008-11-28  Alexey Shchepin  <alexey@process-one.net>
